🚀 US-38 Adaptação das funções para Response e Request